@@ -67,24 +67,6 @@
     </description>
   </property>
   <property>
-    <name>hbase.regionserver.dns.interface</name>
-    <value>default</value>
-    <description>Name of the network interface which a regionserver
-    should use to determine it's "real" IP address.  This lookup
-    prevents strings like "localhost" and "127.0.0.1" from being
-    reported back to the master.
-    </description>
-  </property>
-  <property>
-    <name>hbase.regionserver.dns.interface</name>
-    <value>default</value>
-    <description>Name of the network interface which a regionserver
-    should use to determine it's "real" IP address.  This lookup
-    prevents strings like "localhost" and "127.0.0.1" from being
-    reported back to the master.
-    </description>
-  </property>
-  <property>
     <name>hbase.regionserver.info.port</name>
     <value>60030</value>
     <description>The port for the hbase regionserver web UI
@@ -117,6 +99,15 @@
     operations such as fetching of the root region from root region
     server, getting a cell's value, starting a row update, etc.
     Default: 10.
+    </description>
+  </property>
+  <property>
+    <name>hbase.client.scanner.caching</name>
+    <value>30</value>
+    <description>Number of rows that will be fetched when calling next
+    on a scanner if it is not served from memory. Higher caching values
+    will enable faster scanners but will eat up more memory and some
+    calls of next may take longer and longer times when the cache is empty.
     </description>
   </property>
   <property>
