@@ -21,6 +21,7 @@ Release 0.19.0 - Unreleased
   NEW FEATURES
 
   OPTIMIZATIONS
+   HBASE-887   Fix a hotspot in scanners
 
 Release 0.18.0 - September 21st, 2008
 
